# macerator

./: .commitlintrc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: loong64.yml  miri.yml  release-plz.yml  rust-nightly.yml  rust.yml  wasm.yml
crates/macerator-macros/: CHANGELOG.md  Cargo.toml
crates/macerator-macros/src/: lib.rs
src/: arithmetic.rs  base.rs  bitwise.rs  lib.rs  ord.rs  reduce.rs  unary.rs
src/backend/: aarch64.rs  arch.rs  mod.rs  scalar.rs  wasm32.rs
src/backend/arch/: aarch64.rs  loong64.rs  scalar.rs  wasm32.rs  x86.rs
src/backend/loong64/: lasx.rs  lsx.rs  mod.rs
src/backend/x86/: mod.rs  v2.rs  v3.rs  v4.rs
src/tests/: arithmetic.rs  bitwise.rs  macro_tests.rs  mod.rs  ord.rs  reduce.rs  unary.rs
