[package]
edition = "2024"
name = "macerator"
version = "0.1.0"

[features]
default = ["std"]

std = []

[dependencies]
bytemuck = { version = "1.22.0", features = ["aarch64_simd", "wasm_simd"] }
half = { version = "2.4", features = ["bytemuck", "num-traits"] }
macerator-macros = { version = "0.1.0", path = "crates/macerator-macros" }
num-traits = "0.2.0"
paste = "1"

[workspace]
members = ["crates/macerator-macros"]
