[package]
authors.workspace = true
categories.workspace = true
description = "Type and target-generic SIMD"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "macerator"
readme.workspace = true
repository.workspace = true
version = "0.1.1"

[features]
default = ["std"]

std = []

[dependencies]
bytemuck = { version = "1.22.0", features = ["aarch64_simd", "wasm_simd"] }
half = { version = "2.4", features = ["bytemuck", "num-traits"] }
macerator-macros = { version = "0.1.0", path = "crates/macerator-macros" }
num-traits = "0.2.0"
paste = "1"

[dev-dependencies]
approx = "0.5"
half = { version = "2.4", features = ["bytemuck", "num-traits", "rand_distr"] }
pretty_assertions = "1.4.0"
rand = { version = "0.8.5" }
wasm-bindgen-test = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[workspace]
members = ["crates/macerator-macros"]

[workspace.package]
authors = ["Genna Wingert"]
categories = ["no-std", "wasm"]
edition = "2021"
keywords = ["simd"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wingertge/macerator"
