[package]
authors.workspace = true
categories.workspace = true
description = "Type and target-generic SIMD"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "macerator"
readme.workspace = true
repository.workspace = true
rust-version = "1.81"
version = "0.2.8"

[features]
default = ["std", "avx512"]

avx512 = []
fp16 = ["nightly"]
nightly = []
std = []

[dependencies]
bytemuck = { version = "1.23.1", features = [
    "aarch64_simd",
    "wasm_simd",
    "avx512_simd",
] }
half = { version = "2.5.0", features = ["bytemuck", "num-traits"] }
macerator-macros = { version = "0.1.2", path = "crates/macerator-macros" }
moddef = "0.3"
num-traits = "0.2.0"
paste = "1"

[dev-dependencies]
approx = "0.5"
half = { version = "2.4", features = ["bytemuck", "num-traits", "rand_distr"] }
pretty_assertions = "1.4.0"
rand = { version = "0.9" }
wasm-bindgen-test = "0.3.0"

[build-dependencies]
cfg_aliases = "0.2"
rustc_version = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[workspace]
members = ["crates/macerator-macros"]

[workspace.package]
authors = ["Genna Wingert"]
categories = ["no-std", "wasm"]
edition = "2021"
keywords = ["simd"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wingertge/macerator"
